--- a/scss/global/_boilerplate.scss
+++ b/scss/global/_boilerplate.scss
@@ -26,6 +26,5 @@ body {
 @media screen and (min-width: 1023px){
     body {
         @include customFlex(column, center, center);
-        height: auto;
     }
 }
